# scratch

./: .gitignore  README.md  vcp_opends9.py  vcutds9.py  vprop.py  wcs_testing.ipynb
angularjs/: index.html  todo.js
cadc/: README.md  download_triplets.ipynb  vdlcut.py
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt  atoi.cpp  atoi.h
cpp/test/: CMakeLists.txt  test_atoi.cpp
csharp/hello/: Greeter.cs  Hello.cs  MainClass.cs  hello.csproj  hello.sln
ctesting/: .gitignore
ctesting/cunit/: .project  Makefile  README  test.c
django-tdd/ch3/superlists/lists/: tests.py
django-tdd/ch4/superlists/: functional_tests.py
django-tdd/ch4/superlists/lists/: tests.py
django-tdd/ch4/superlists/superlists/: settings.py
django-tdd/ch5/superlists/: functional_tests.py
django-tdd/ch5/superlists/lists/: tests.py  views.py
django-tdd/ch6/superlists/: functional_tests.py
feed-harvesting/: feeds.py
github-api/: notes.txt  usersearch.py
jasmine-require/: math.js
jasmine-require/tests/: SpecRunner.html
js-testing/jasmine-tests/: math_spec.js
leaflet/: index.html
motif/dialogs/: Makefile  node_info.c
opengl/Primer/ch2/: Makefile  simple.c  simple2.c
opengl/Primer/ch3/: Makefile  draw_rect.c  single_double.c  spin.c
opengl/Primer/ch4/: Makefile  cube.c  cube_arrays.c
opengl/Tutorial/: Makefile  build_check.cpp
patch-boundaries/: .gitignore  CMakeLists.txt  build.sh  run_tests.sh
patch-boundaries/src/: patch.cpp  patch.h
patch-boundaries/test/: patch_test.cpp
python-c/: Makefile  README  hello.c  hello.py
(+15 files in other folders)
